nonprod-deployment-fairshare-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fairshare-client
  namespace: nonprod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fairshare-client
  template:
    metadata:
      labels:
        app: fairshare-client
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: fairshare-client-config-8c8bhb64ht
        image: ghcr.io/taku10/fairshare-client:2d613f1
        imagePullPolicy: Always
        name: fairshare-client
        ports:
        - containerPort: 80
