prod-deployment-fairshare-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fairshare-client
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fairshare-client
  template:
    metadata:
      labels:
        app: fairshare-client
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: fairshare-client-config-9c466tdhd8
        image: ghcr.io/taku10/fairshare-client:4db4c14
        imagePullPolicy: Always
        name: fairshare-client
        ports:
        - containerPort: 80
