prod-service-fairshare-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: fairshare-client
  namespace: prod
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: fairshare-client
  type: ClusterIP
