prod-service-fairshare-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: fairshare-server
  namespace: prod
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: fairshare-server
  type: ClusterIP
